--- a/scss/compile.scss
+++ b/scss/compile.scss
@@ -36,6 +36,8 @@
 @import 'pages/home';
 @import 'pages/loginform';
 @import 'pages/porjecttab';
+@import 'pages/addedsuccess';
+@import 'pages/timerstart';
 
 
 
