--- a/scss/pages/_loginform.scss
+++ b/scss/pages/_loginform.scss
@@ -15,4 +15,12 @@
         line-height: 35px;
         width: 100%;
     }
+    .forgot-password {
+        margin-top: 10px;
+        a {
+            color: #6FB556;
+            font-size: 12px;
+            
+        }
+    }
 }
