--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -154,38 +154,38 @@ label {
 // }
 
 /*========.nice-select=============*/ 
-.nice-select {
-    width: 100%;
-    border-radius: 50px;
-    height: 50px;
-    line-height: 50px;
-    padding-left: 20px;
-    border-color:  #ced4da;
-    .list {
-        width: 100%;
-        box-shadow: none;
-        border: 1px solid #ced4da;
-    }
-    &:focus {
-        border-color: #154D32;
-    }
-    &:hover {
-        border-color: #154D32;
-    }
-    &:after{
-        right: 25px;
-        border-color: #ced4da;
-        width: 10px;
-        height: 10px;
-        margin-top: -6px;
-    }
-    &:hover:after {
-        border-color: #2A7D2E;
-    }
-}
-.ps__scrollbar-y {
-    background-color: #99822c !important;
-}
+// .nice-select {
+//     width: 100%;
+//     border-radius: 50px;
+//     height: 50px;
+//     line-height: 50px;
+//     padding-left: 20px;
+//     border-color:  #ced4da;
+//     .list {
+//         width: 100%;
+//         box-shadow: none;
+//         border: 1px solid #ced4da;
+//     }
+//     &:focus {
+//         border-color: #154D32;
+//     }
+//     &:hover {
+//         border-color: #154D32;
+//     }
+//     &:after{
+//         right: 25px;
+//         border-color: #ced4da;
+//         width: 10px;
+//         height: 10px;
+//         margin-top: -6px;
+//     }
+//     &:hover:after {
+//         border-color: #2A7D2E;
+//     }
+// }
+// .ps__scrollbar-y {
+//     background-color: #99822c !important;
+// }
 
 
 
