--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -1,3 +1,2 @@
 /*======fonts==============*/ 
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i|Rubik:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap');
