--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -7,8 +7,7 @@ $primary-color: #6FB556;
 $secondary-color: #314963;
 
 //===== Font-Family =====//
-$body-font: 'Open Sans', sans-serif;
-$heading-font: 'Roboto', sans-serif;
+$body-font: 'Poppins', sans-serif;
 
 // ===== Font-Size ======//
 $body-font-size: 13px;
